--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ amqp==5.2.0
 asgiref==3.8.1
 billiard==4.2.0
 celery==5.3.6
+certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.7
 click-didyoumean==0.3.1
 click-plugins==1.1.1
@@ -15,7 +17,11 @@ django-filter==24.1
 django-timezone-field==6.1.0
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
+dnspython==2.6.1
 drf-yasg==1.21.7
+eventlet==0.36.1
+greenlet==3.0.3
+idna==3.6
 inflection==0.5.1
 kombu==5.3.6
 packaging==24.0
@@ -28,9 +34,11 @@ python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.1
 redis==5.0.3
+requests==2.31.0
 six==1.16.0
 sqlparse==0.4.4
 tzdata==2024.1
 uritemplate==4.1.1
+urllib3==2.2.1
 vine==5.1.0
 wcwidth==0.2.13
