--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,11 @@
 SECRET_KEY=
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
+
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_HOST=
+POSTGRES_PORT=
+
 CELERY_BROKER_URL=
 CELERY_RESULT_BACKEND=
 TELEBOT_KEY=
